--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "uvicorn>=0.30.1",
     "fastapi>=0.111.0",
+    "langchain-groq>=0.1.5",
+    "sse-starlette>=2.1.0",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
