--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6; platform_system == "Windows" or sys_platform == "win32"
 dataclasses-json==0.6.7
+distro==1.9.0
 dnspython==2.6.1
 email-validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 frozenlist==1.4.1
 greenlet==3.0.3; platform_machine == "win32" or platform_machine == "WIN32" or platform_machine == "AMD64" or platform_machine == "amd64" or platform_machine == "x86_64" or platform_machine == "ppc64le" or platform_machine == "aarch64"
+groq==0.8.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -29,6 +31,7 @@ jsonschema-specifications==2023.12.1
 langchain==0.2.3
 langchain-community==0.2.4
 langchain-core==0.2.5
+langchain-groq==0.1.5
 langchain-text-splitters==0.2.1
 langserve==0.2.2
 langsmith==0.1.76
@@ -55,6 +58,7 @@ setuptools==70.0.0
 shellingham==1.5.4
 sniffio==1.3.1
 sqlalchemy==2.0.30
+sse-starlette==2.1.0
 starlette==0.37.2
 tenacity==8.3.0
 toml==0.10.2
