feat: add google provider

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiohttp==3.9.5
 aiosignal==1.3.1
 anyio==4.4.0
 attrs==23.2.0
+cachetools==5.3.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -12,14 +13,33 @@ colorama==0.4.6; platform_system == "Windows" or sys_platform == "win32"
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.6.1
+docstring-parser==0.16
 email-validator==2.1.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 frozenlist==1.4.1
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.133.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-cloud-aiplatform==1.54.1
+google-cloud-bigquery==3.24.0
+google-cloud-core==2.4.1
+google-cloud-resource-manager==1.12.3
+google-cloud-storage==2.17.0
+google-crc32c==1.5.0
+google-generativeai==0.5.4
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.1
 greenlet==3.0.3; platform_machine == "win32" or platform_machine == "WIN32" or platform_machine == "AMD64" or platform_machine == "amd64" or platform_machine == "x86_64" or platform_machine == "ppc64le" or platform_machine == "aarch64"
 groq==0.8.0
+grpc-google-iam-v1==0.13.0
+grpcio==1.64.1
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.0
 idna==3.7
@@ -31,6 +51,8 @@ jsonschema-specifications==2023.12.1
 langchain==0.2.3
 langchain-community==0.2.4
 langchain-core==0.2.5
+langchain-google-genai==1.0.6
+langchain-google-vertexai==1.0.5
 langchain-groq==0.1.5
 langchain-text-splitters==0.2.1
 langserve==0.2.2
@@ -44,9 +66,15 @@ mypy-extensions==1.0.0
 numpy==1.26.4
 orjson==3.10.4
 packaging==23.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
 pydantic==1.10.15
 pygments==2.18.0
+pyparsing==3.1.2; python_version > "3.0"
 pyproject-toml==0.0.10
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pyyaml==6.0.1
@@ -54,18 +82,23 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
 rpds-py==0.18.1
+rsa==4.9
 setuptools==70.0.0
+shapely==2.0.4
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 sqlalchemy==2.0.30
 sse-starlette==2.1.0
 starlette==0.37.2
 tenacity==8.3.0
 toml==0.10.2
+tqdm==4.66.4
 typer==0.12.3
 typing-extensions==4.12.2
 typing-inspect==0.9.0
 ujson==5.10.0
+uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.30.1
 uvloop==0.19.0; (sys_platform != "cygwin" and sys_platform != "win32") and platform_python_implementation != "PyPy"
