--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "fastapi>=0.111.0",
     "langchain-groq>=0.1.5",
     "sse-starlette>=2.1.0",
+    "langchain-google-genai>=1.0.6",
+    "langchain-google-vertexai>=1.0.5",
 ]
 requires-python = "==3.12.*"
 readme = "README.md"
